--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 	compile project(':simon')
 	//api 'com.github.ZXHHYJ:mandysax:1.0.1'
 	compile project(':BottomNavigationBar')
-	compile 'androidx.swiperefreshlayout:swiperefreshlayout:+'
-	compile 'androidx.recyclerview:recyclerview:+'
+	compile 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
+	compile 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
 	compile fileTree(dir: 'libs', include: ['*.jar'])
 }
