--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,22 @@
 apply plugin: 'com.android.library'
+
 android {
     compileSdkVersion 29
-    buildToolsVersion "29"
+    buildToolsVersion "29.0.3"
+
+    defaultConfig {
+        minSdkVersion 21
+        targetSdkVersion 29
+        versionCode 1
+        versionName "1.0"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
-
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+}
