--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,11 +1,18 @@
 <?xml version='1.0' encoding='utf-8'?>
 <manifest
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	package="mandysax">
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	<application>
-		<provider
-			android:authorities="${applicationId}.mandysa.lifecycle"
-			android:name="mandysax.plus.lifecycle.LifecycleContentProvider"/>
-	</application>
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="mandysax">
+
+    <application>
+
+        <provider
+			android:exported="false"
+            android:authorities="${applicationId}.mandysa.lifecycle"
+            android:name="mandysax.plus.lifecycle.LifecycleContentProvider"/>
+      
+        <service
+            android:name="mandysax.plus.media.PlayService"/>
+        
+    </application>
+
 </manifest>
