--- a/mandysax/build.gradle
+++ b/mandysax/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.library'
 
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.liuxiaoliu66'
+
 ext {
     VER_CODE = 20200
     VER_NAME = "2.2.0"
