--- a/mandysax/build.gradle
+++ b/mandysax/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 
 android {
     compileSdk 31
@@ -16,4 +17,14 @@ android {
         implementation 'androidx.annotation:annotation:1.2.0'
     }
 
+}
+
+project.afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+            }
+        }
+    }
 }
