--- a/mandysax/build.gradle
+++ b/mandysax/build.gradle
@@ -9,22 +9,22 @@ android {
         targetSdk 31
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     dependencies {
         implementation 'androidx.annotation:annotation:1.2.0'
     }
 
-}
-
-project.afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
+    project.afterEvaluate {
+        publishing {
+            publications {
+                release(MavenPublication) {
+                    from components.release
+                }
             }
         }
     }
+
 }
