--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,4 @@ dependencyResolutionManagement {
 rootProject.name = "MandySa_Music"
 include ':app', 'mandysax'
 include ':JiuWo'
-include ':BottomNavigationBar'
+include ':media'
