--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,23 @@ android {
 }
 
 dependencies {
+    implementation 'com.facebook.fresco:fresco:2.6.0'
+    // Litho
+    implementation 'com.facebook.litho:litho-core:0.40.0'
+    implementation 'com.facebook.litho:litho-widget:0.40.0'
+    annotationProcessor 'com.facebook.litho:litho-processor:0.40.0'
+
+    // SoLoader
+    implementation 'com.facebook.soloader:soloader:0.10.1'
+
+    implementation 'com.facebook.litho:litho-fresco:0.40.0'
+
+    implementation 'com.facebook.litho:litho-sections-core:0.40.0'
+    implementation 'com.facebook.litho:litho-sections-widget:0.40.0'
+    compileOnly 'com.facebook.litho:litho-sections-annotations:0.40.0'
+
+    annotationProcessor 'com.facebook.litho:litho-sections-processor:0.40.0'
+
     implementation 'com.gitee.liuxiaoliu66:anna:2.1.0'
     implementation 'com.gitee.liuxiaoliu66:bottom-navigation-bar:1.0.0'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
