--- a/AndroidSlidingUpPanel/build.gradle
+++ b/AndroidSlidingUpPanel/build.gradle
@@ -1,8 +1,10 @@
 apply plugin: 'com.android.library'
 android {
-	compileSdkVersion 31
+	compileSdk 31
+
 	defaultConfig {
-		targetSdkVersion 31
+		minSdk 21
+		targetSdk 31
 	}
 }
 dependencies {
