--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
 
 dependencies {
     // 映射存储库：https://github.com/Tencent/MMKV
-    implementation 'com.tencent:mmkv:1.2.11'
+    //implementation 'com.tencent:mmkv:1.2.11'
     // 图片加载库：https://github.com/nostra13/Android-Universal-Image-Loader
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     // 网络请求库：https://gitee.com/liuxiaoliu66/anna
