优化细节，锁定竖屏 补齐搜索功能

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,9 +8,8 @@ dependencyResolutionManagement {
 }
 rootProject.name = "MandySa_Music"
 include ':app', 'mandysax'
-include ':JiuWo'
 include ':media'
-include ':AndroidSlidingUpPanel'
+//include ':AndroidSlidingUpPanel'
 include ':statelayout'
 include ':bottomnavigationbar'
-include ':LyricView'
+/*include ':LyricView'*/
