--- a/AndroidSlidingUpPanel/build.gradle
+++ b/AndroidSlidingUpPanel/build.gradle
@@ -1,12 +1,15 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 android {
-	compileSdk 31
+    compileSdk 31
 
-	defaultConfig {
-		minSdk 21
-		targetSdk 31
-	}
+    defaultConfig {
+        minSdk 21
+        targetSdk 31
+    }
 }
 dependencies {
-	api 'androidx.recyclerview:recyclerview:1.2.1'
+    api 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
