--- a/bottomnavigationbar/build.gradle
+++ b/bottomnavigationbar/build.gradle
@@ -30,5 +30,6 @@ android {
 
 dependencies {
     implementation project(':mandysax')
-    implementation project(':JiuWo')
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.gitee.liuxiaoliu66:jiuwo:1.0.0'
 }
