准备补齐完整的我的界面

--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,15 @@ buildscript {
     }
 }
 
+allprojects {
+    repositories {
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url "https://jitpack.io" }
+        mavenCentral()
+        google()
+    }
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
