--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,19 +37,22 @@ dependencies {
     // 图片加载库：https://github.com/nostra13/Android-Universal-Image-Loader
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     // 网络请求库：https://gitee.com/liuxiaoliu66/anna
-    implementation 'com.gitee.liuxiaoliu66:anna:2.1.1'
+    //noinspection GradleDependency
+    implementation 'com.gitee.liuxiaoliu66:anna:2.1.2'
     // bottomNavigationBar：https://gitee.com/liuxiaoliu66/bottom-navigation-bar
     //implementation 'com.gitee.liuxiaoliu66:bottom-navigation-bar:1.1.2'
     implementation 'com.gitee.liuxiaoliu66:jiuwo:1.0.0'
-
     implementation 'com.gitee.liuxiaoliu66:sofia:1.0.2'
 
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
+    implementation 'com.github.hannesa2:AndroidSlidingUpPanel:4.3.1'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     implementation project(':bottomnavigationbar')
     implementation project(':mandysax')
     implementation project(':media')
-    implementation 'com.github.hannesa2:AndroidSlidingUpPanel:4.3.1'
     implementation project(':statelayout')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
