--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     //implementation 'com.gitee.liuxiaoliu66:bottom-navigation-bar:1.1.2'
     implementation 'com.gitee.liuxiaoliu66:jiuwo:1.0.0'
     implementation 'com.gitee.liuxiaoliu66:sofia:1.0.2'
+    implementation 'com.flaviofaria:kenburnsview:1.0.7'
 
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
