--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,4 @@ include ':media'
 include ':mandysax'
 include ':statelayout'
 include ':bottomnavigationbar'
-/*include ':LyricView'*/
+include ':jiuwo'
