--- a/bottomnavigationbar/build.gradle
+++ b/bottomnavigationbar/build.gradle
@@ -31,5 +31,5 @@ android {
 dependencies {
     implementation project(':mandysax')
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.gitee.liuxiaoliu66:jiuwo:1.0.0'
+    implementation project(':jiuwo')
 }
