--- a/jiuwo/build.gradle
+++ b/jiuwo/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        minSdk 21
+        minSdk 16
         targetSdk 31
 
         consumerProguardFiles "consumer-rules.pro"
@@ -29,5 +29,5 @@ android {
 }
 
 dependencies {
-    api 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
