--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,7 @@ android {
 dependencies {
     // 存储库：https://gitee.com/simon9102/tuke
     implementation 'com.gitee.simon9102:tuke:1.0.0'
-    // 图片加载库：https://github.com/nostra13/Android-Universal-Image-Loader
-    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    // 图片加载库：https://www.fresco-cn.org/
     implementation 'com.facebook.fresco:fresco:2.6.0'
     // 网络请求库：https://gitee.com/liuxiaoliu66/anna
     //noinspection GradleDependency
