重新设计主页和搜索界面 着手优化xml命名 修复mandysax在特殊情况下fragment顺序错乱问题，导致‘子’比’父‘先恢复从而发生闪退

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation project(':bottomnavigationbar')
+    implementation project(':tablayout')
     implementation project(':mandysax')
     implementation project(':media')
     implementation project(':statelayout')
