--- a/mandysax/build.gradle
+++ b/mandysax/build.gradle
@@ -23,6 +23,7 @@ android {
 
 dependencies {
     implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
 
 task androidSourcesJar(type: Jar) {
