--- a/jiuwo/build.gradle
+++ b/jiuwo/build.gradle
@@ -29,5 +29,5 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    api 'androidx.recyclerview:recyclerview:1.2.1'
 }
