--- a/mandysax/build.gradle
+++ b/mandysax/build.gradle
@@ -22,8 +22,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.annotation:annotation:1.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation('androidx.recyclerview:recyclerview:1.2.1')
 }
 
 task androidSourcesJar(type: Jar) {
