--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,15 +29,15 @@ android {
     buildFeatures {
         viewBinding true
     }
-    repositories {
-        flatDir {
-            dir 'libs'
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
 }
 
 dependencies {
-    implementation(name:'renderscript-toolkit-release', ext:'aar')
+    implementation fileTree(include: ['*.?ar'], dir: 'libs')
 
     // 存储库：https://gitee.com/simon9102/tuke
     implementation 'com.gitee.simon9102:tuke:1.0.0'
@@ -46,7 +46,7 @@ dependencies {
     // 网络请求库：https://gitee.com/liuxiaoliu66/anna
     //noinspection GradleDependency
     implementation 'com.gitee.liuxiaoliu66:anna:2.1.2'
-    implementation 'com.gitee.liuxiaoliu66:sofia:1.1.1'
+    implementation 'com.gitee.liuxiaoliu66:sofia:1.1.5'
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
 
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -60,4 +60,5 @@ dependencies {
     implementation project(':media')
     implementation project(':statelayout')
     implementation project(':jiuwo')
+    implementation project(':viewpager')
 }
