--- a/mandysax/build.gradle
+++ b/mandysax/build.gradle
@@ -22,7 +22,7 @@ android {
 }
 
 dependencies {
-    implementation('androidx.recyclerview:recyclerview:1.2.1')
+    implementation("androidx.annotation:annotation:1.3.0")
 }
 
 task androidSourcesJar(type: Jar) {
