--- a/gradle.properties
+++ b/gradle.properties
@@ -13,4 +13,6 @@
 #Thu Feb 03 22:09:52 CST 2022
 org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M" -Dfile.encoding\=UTF-8
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
+android.nonTransitiveRClass=true
+org.gradle.unsafe.configuration-cache=true
